WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34611
WebLocalizedString() could use an assertion that it is being called on the main thread
https://bugs.webkit.org/show_bug.cgi?id=34611
Summary
WebLocalizedString() could use an assertion that it is being called on the ma...
John Sullivan
Reported
2010-02-04 13:13:19 PST
WebLocalizedString() in WebLocalizableStrings.m is not thread-safe because it performs no internal locking when setting or using the value of a static variable. Also, it calls -[NSBundle localizedStringForKey:], which is not guaranteed to be thread-safe. To catch thread-safety issues, it would be useful to assert that this function is being called on the main thread.
Attachments
Patch to add an assertion.
(12.50 KB, patch)
2010-02-04 13:41 PST
,
John Sullivan
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2010-02-04 13:41:09 PST
Created
attachment 48166
[details]
Patch to add an assertion.
John Sullivan
Comment 2
2010-02-04 13:46:13 PST
Fixed in <
http://trac.webkit.org/changeset/54367
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug