https://bugs.webkit.org/show_bug.cgi?id=34611 WebLocalizedString() could use an assertion that it is being called on the main thread

Reviewed by Tim Hatcher.

WebKit: 

* WebKit.xcodeproj/project.pbxproj:
Updated for renamed file (WebLocalizableStrings.m -> WebLocalizableStrings.mm)

WebKit/mac: 

* Misc/WebLocalizableStrings.m: Removed.
* Misc/WebLocalizableStrings.mm: Copied from mac/Misc/WebLocalizableStrings.m.
Renamed to use .mm extension so it can include a C++ header.
(WebLocalizedString):
Added an assertion that this is being called on the main thread.



git-svn-id: svn://svn.chromium.org/blink/trunk@54367 bbb929c8-8fbe-4397-9dbb-9b2b20218538